Refactor Find Logic and Test Cases
Previously, Tag Searching was implemented but was not fully integrated into Find Command Logic leading to some deviations in behaviour. Also, test cases were not concise enough too

Refactoring the Find Logic helps to ensure that all Find parameters behave the same way. Test cases are also shorter with factory methods for better reusability and maintainability

Let's update the code to finish Find